# ProjetoGraduacao

./: .gitignore  README.md  exec_pipeline.sh  run_tests.sh  todo.txt
datasets/gargoyle/: 00_absolute_paths.txt  00_index.txt  01
datasets/gnome/: 00_absolute_paths.txt  00_index.txt
sources/: CMakeLists.txt  todo.txt
sources/Projeto/: CMakeLists.txt  todo.txt
sources/Projeto/dependencies/OpenCV/: CMakeLists.txt
sources/Projeto/dependencies/OpenCV/include/: .gitkeep
sources/Projeto/dependencies/OpenCV/lib/: .gitkeep
sources/Projeto/dependencies/PBA/: CMakeLists.txt
sources/Projeto/dependencies/PBA/include/: .gitkeep
sources/Projeto/dependencies/PBA/lib/: .gitkeep
sources/Projeto/dependencies/VTK/: CMakeLists.txt
sources/Projeto/dependencies/VTK/include/: .gitkeep
sources/Projeto/dependencies/VTK/lib/: .gitkeep
sources/Projeto/include/: Camera.h  Graph.h  Keypoint.h  MathUtils.h  ParallelBundleAdjustment.h  PointCloud.h  Seed.h  StereoPair.h  Track.h  cmdline_parser.h  logger.h  sfmPointCloud.h
sources/Projeto/libs/OpenCV/: CMakeLists.txt
sources/Projeto/libs/PBA/: CMakeLists.txt
sources/Projeto/libs/VTK/: CMakeLists.txt
sources/Projeto/src/: Camera.cpp  Graph.cpp  Keypoint.cpp  ParallelBundleAdjustment.cpp  PointCloud.cpp  Seed.cpp  StereoPair.cpp  Track.cpp  cmdline_parser.cpp  main.cpp  sfmPointCloud.cpp
sources/filter-cloud/: CMakeLists.txt
sources/filter-cloud/include/: callable_utils.h
sources/filter-cloud/src/: main.cpp
sources/mesh/: CMakeLists.txt
sources/mesh/include/: SurfaceRecon.h  parser.h
sources/mesh/src/: SurfaceRecon.cpp  main.cpp  parser.cpp
sources/packt-sfm/: CMakeLists.txt
sources/packt-sfm/src/: main.cpp
sources/pcloud/: CMakeLists.txt
sources/pcloud/include/: cmdline_parser.h  io.h  logger.h  sfmPointCloud.h
sources/pcloud/src/: cmdline_parser.cpp  io.cpp  main.cpp  sfmPointCloud.cpp
